used materializecss to add fixed card heights
fixed bug where lowest card was getting cut off

--- a/sass/materialize.scss
+++ b/sass/materialize.scss
@@ -43,10 +43,6 @@
 	height: 80vh;
 }
 
-.card {
-	height: 450px;
-}
-
 .section {
 	min-height: 80vh;
 }
